# rustyBSCP

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: config.rs  main.rs  output.rs  scanner.rs
src/checks/: access_control.rs  business_logic.rs  cors.rs  crawl.rs  deserialization.rs  enumeration.rs  git_dump.rs  information_disclosure.rs  lfi.rs  login.rs  mod.rs  oauth.rs  prototype_pollution.rs  request_smuggling.rs  sqli.rs  ssrf.rs  upload.rs  web_cache.rs  websocket.rs  xss.rs
src/exploits/: clte_smuggle.rs  mod.rs  wcache_poison.rs
wordlists/: passwords.txt  usernames.txt
