[package]
name = "rusty-bscp"
version = "0.1.0"
edition = "2021"
description = "Web Security Academy Auto-Recon Tool — a concurrent Rust rewrite of WSAAR"

[[bin]]
name = "rbscp"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
base64     = "0.22"
flate2     = "1"
clap       = { version = "4", features = ["derive"] }
colored    = "2"
futures    = "0.3"
regex      = "1"
reqwest    = { version = "0.12", features = ["cookies", "json", "gzip"] }
scraper    = "0.21"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
tokio      = { version = "1", features = ["full"] }

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
unwrap_used             = "deny"
expect_used             = "warn"
panic                   = "deny"
panic_in_result_fn      = "deny"
unimplemented           = "deny"
dbg_macro               = "deny"
await_holding_lock      = "deny"
large_futures           = "deny"
mem_forget              = "deny"
module_name_repetitions = "allow"
similar_names           = "allow"
